--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,18 @@
-/* Stylesheet */
+/* Global */
+
+.home {
+	background: grey;
+}
+
+.gallery { 
+	background: orange;
+}
+
+/* NAV */
+
+.home a {
+	font-weight: bold;
+	font-size: 2em;
+	text-transform: uppercase;
+	text-shadow: 2px 2px 0 white;
+}
